# openmv-studio

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  resources.yml
public/: about.html  connect-helper.js  pinout.html  progress.html  resources.html  romfs-editor.html  settings.html  training.html
public/pinouts/: index.json
scripts/: package-resources.sh  setup.sh
src/: completions.ts  files.ts  gl.ts  main.ts  panels.ts  pinout.ts  resize.ts  resources.ts  romfs-editor.ts  settings.ts  shortcuts.ts  state.ts  style.css  theme.ts  training.ts  welcome.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: annotate.py  export.py  train.py
src-tauri/src/: backend.rs  camera.rs  dfu.rs  lib.rs  main.rs  protocol.rs  resources.rs  romfs.rs  training.rs  transport.rs
