[package]
name = "openmv-ide"
version = "0.1.0"
description = "OpenMV IDE - Machine Vision Made Simple"
authors = ["OpenMV, LLC"]
license = "MIT"
repository = "https://github.com/openmv/openmv"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "openmv_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serialport = "4.6"
bitflags = "2.6"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
crc = "3.4"
