[package]
name = "openmv-studio"
version = "0.1.0"
description = "OpenMV Studio - Machine Vision Made Simple"
authors = ["OpenMV, LLC"]
license = "MIT"
repository = "https://github.com/openmv/openmv"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "openmv_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
time = { version = "0.3", features = ["local-offset"] }
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
serialport = "4.6"
bitflags = "2.6"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
crc = "3.4"
open = "5"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.12", features = ["stream", "native-tls", "json"], default-features = false }
sha2 = "0.10"
tar = "0.4"
xz2 = "0.1"
futures-util = "0.3"
tauri-plugin-process = "2.3.1"

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
